Add support for setting C++ and C standard

--- a/cc_toolchain/BUILD.bazel
+++ b/cc_toolchain/BUILD.bazel
@@ -114,6 +114,15 @@ cc_toolchain_config(
         "//cc_toolchain/features:supports_pic",
         "//cc_toolchain/features:startup_libs",
         "//cc_toolchain/features:coverage",
+        "//cc_toolchain/features:c++11",
+        "//cc_toolchain/features:c++14",
+        "//cc_toolchain/features:c++17",
+        "//cc_toolchain/features:c++20",
+        "//cc_toolchain/features:c89",
+        "//cc_toolchain/features:c90",
+        "//cc_toolchain/features:c95",
+        "//cc_toolchain/features:c99",
+        "//cc_toolchain/features:c11",
     ],
     linker = "@clang_llvm_12_00_x86_64_linux_gnu_ubuntu_16_04//:bin/ld.lld",
     object_dump_tool = "@clang_llvm_12_00_x86_64_linux_gnu_ubuntu_16_04//:bin/llvm-objdump",
