Allow the compiler & other tools to be called from any working directory

--- a/cc_toolchain/wrappers/posix/BUILD
+++ b/cc_toolchain/wrappers/posix/BUILD
@@ -35,6 +35,7 @@ filegroup(
         "objcopy",
         "objdump",
         "strip",
+        "generic_tool_wrapper",
     ],
     visibility = ["//visibility:public"],
 )
