--- a/cc_toolchain/BUILD.bazel
+++ b/cc_toolchain/BUILD.bazel
@@ -123,6 +123,7 @@ cc_toolchain_config(
         "//cc_toolchain/features:c95",
         "//cc_toolchain/features:c99",
         "//cc_toolchain/features:c11",
+        "//cc_toolchain/features:ignore_unused_arguments",
     ],
     linker = "@clang_llvm_12_00_x86_64_linux_gnu_ubuntu_16_04//:bin/ld.lld",
     object_dump_tool = "@clang_llvm_12_00_x86_64_linux_gnu_ubuntu_16_04//:bin/llvm-objdump",
