Fix lto; Add asan support

--- a/cc_toolchain/BUILD.bazel
+++ b/cc_toolchain/BUILD.bazel
@@ -124,6 +124,9 @@ cc_toolchain_config(
         "//cc_toolchain/features:c99",
         "//cc_toolchain/features:c11",
         "//cc_toolchain/features:ignore_unused_arguments",
+        "//cc_toolchain/features:lto",
+        "//cc_toolchain/features:asan",
+        "//cc_toolchain/features:asan_libs",
     ],
     linker = "@clang_llvm_12_00_x86_64_linux_gnu_ubuntu_16_04//:bin/ld.lld",
     object_dump_tool = "@clang_llvm_12_00_x86_64_linux_gnu_ubuntu_16_04//:bin/llvm-objdump",
