--- a/config/BUILD.bazel
+++ b/config/BUILD.bazel
@@ -50,6 +50,13 @@ alias(
 )
 
 alias(
+    name = "libasan_multiplexer",
+    actual = select({
+        ":linux_x86_64": "@clang_llvm_12_00_x86_64_linux_gnu_ubuntu_16_04//:llvm_libasan",
+    }),
+)
+
+alias(
     name = "startup_libs",
     actual = select({
         ":linux_x86_64": "@debian_stretch_amd64_sysroot//:startup_libs",
